test gc in jdk6 and jdk7